fix: list record title align center

--- a/src/features/record/list/index.module.scss
+++ b/src/features/record/list/index.module.scss
@@ -1,6 +1,7 @@
 .container {
   .title {
     margin-bottom: 0;
+    text-align: center;
   }
 
   height: 100%;
